package com.trodar.common.entity

data class PreachItemTestTag(
    val rowContainer: String,
    val minusButton: String,
    val textNumber: String,
    val  plusButton: String
)
